Fix screen and button alignment

--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -27,7 +27,7 @@
   text-align: center;
   font-size: 16px;
   margin: 4px 2px;
-  margin-left: 13px;
+  margin-left: 13.5px;
   transition-duration: 0.2s;
   cursor: pointer;
 }
@@ -49,7 +49,7 @@
   margin: 4px 2px;
   transition-duration: 0.2s;
   cursor: pointer;
-  margin-left: 13px;
+  margin-left: 13.5px;
 }
 
 .button-up-down:hover {
@@ -67,7 +67,7 @@
   text-align: center;
   font-size: 16px;
   margin: 4px 2px;
-  margin-left: 13px;
+  margin-left: 13.5px;
   transition-duration: 0.2s;
   cursor: pointer;
 }
@@ -144,6 +144,7 @@
   text-align: center;
   font-size: 16px;
   margin: 4px 2px;
+  margin-right: 13.5px;
   transition-duration: 0.2s;
   cursor: pointer;
 }
